kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lecoursier-service
spec:
  selector:
    app: lecoursier
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
