kubernetes/mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog-service
  labels:
    app: mailhog
spec:
  type: ClusterIP
  ports:
    - port: 1025
      targetPort: 1025
      protocol: TCP
      name: smtp
    - port: 8025
      targetPort: 8025
      protocol: TCP
      name: web
  selector:
    app: mailhog
