kubernetes/mailhog-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog-web-service
  labels:
    app: mailhog
spec:
  type: ClusterIP
  ports:
    - port: 8025
      targetPort: 8025
      protocol: TCP
      name: web
  selector:
    app: mailhog
