kubernetes/redis-commander-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander-service
  labels:
    app: redis-commander
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: web
  selector:
    app: redis-commander
