kubernetes/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: web
      targetPort: 80
    - port: 443
      name: websecure
      targetPort: 443
    - port: 8080
      name: admin
      targetPort: 8080
  selector:
    app: traefik
