kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lecoursier-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: lecoursier.kubernetes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lecoursier-service
                port:
                  number: 80
    - host: mailhog.kubernetes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog-web-service
                port:
                  number: 8025
    - host: redis.kubernetes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-commander-service
                port:
                  number: 8081
    - host: pgadmin.kubernetes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
